fix(selectbox): left-align text

--- a/src/directives/ccSelectBox/ccselectbox.scss
+++ b/src/directives/ccSelectBox/ccselectbox.scss
@@ -36,7 +36,7 @@
         width: 100%;
         height: $cc-select-box__height;
         line-height: $cc-select-box__height;
-        text-align: center;
+        padding-left: 10px;
         border-radius: $cc-select-box__border-radius;
         margin: 0 0 5px 0;
         background: $cc-select-box__background;
